--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@discordjs/rest": "^1.5.0",
     "discord.js": "^14.7.1",
     "dotenv": "^16.0.3",
-    "mysql2": "^3.1.2",
+    "mongodb": "6.3",
     "unorm": "^1.6.0"
   }
 }
